c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/multiply_pointers_2.c
/* It's illegal to multiply, divide, or take the modulo of pointers */
int main(void)
{
    int *x = 0;
    (0 * x);
    return 0;
}